--- a/index.html
+++ b/index.html
@@ -11,50 +11,83 @@
         <h1>Car Rental System</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#cars">Available Cars</a></li>
+                <li><a href="#available-cars">Available Cars</a></li>
                 <li><a href="#rent">Rent a Car</a></li>
-                <li><a href="#return">Return a Car</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section id="home" class="section">
-            <h2>Welcome to Our Car Rental Service</h2>
-            <p>Choose from our wide range of cars to make your journey comfortable and memorable.</p>
-        </section>
+    <section id="available-cars" class="section">
+        <h2>Available Cars</h2>
+        <p>Select from our fleet of well-maintained cars:</p>
+        <div class="car-grid">
+            <div class="car-card">
+                <h3>Honda Civic</h3>
+                <p>Price: ₹1,500/day</p>
+                <p>Seats: 5</p>
+                <p>Fuel: Petrol</p>
+            </div>
+            <div class="car-card">
+                <h3>Toyota Corolla</h3>
+                <p>Price: ₹1,800/day</p>
+                <p>Seats: 5</p>
+                <p>Fuel: Petrol</p>
+            </div>
+            <div class="car-card">
+                <h3>Maruti Suzuki Swift</h3>
+                <p>Price: ₹1,200/day</p>
+                <p>Seats: 5</p>
+                <p>Fuel: Diesel</p>
+            </div>
+            <div class="car-card">
+                <h3>Hyundai Creta</h3>
+                <p>Price: ₹2,200/day</p>
+                <p>Seats: 5</p>
+                <p>Fuel: Diesel</p>
+            </div>
+            <div class="car-card">
+                <h3>Mahindra Scorpio</h3>
+                <p>Price: ₹2,500/day</p>
+                <p>Seats: 7</p>
+                <p>Fuel: Diesel</p>
+            </div>
+            <div class="car-card">
+                <h3>Tata Nexon</h3>
+                <p>Price: ₹1,800/day</p>
+                <p>Seats: 5</p>
+                <p>Fuel: Electric</p>
+            </div>
+            <div class="car-card">
+                <h3>Ford EcoSport</h3>
+                <p>Price: ₹1,700/day</p>
+                <p>Seats: 5</p>
+                <p>Fuel: Petrol</p>
+            </div>
+        </div>
+    </section>
 
-        <section id="cars" class="section">
-            <h2>Available Cars</h2>
-            <div id="car-list" class="car-grid"></div>
-        </section>
+    <section id="rent" class="section">
+        <h2>Rent a Car</h2>
+        <form id="rental-form">
+            <label for="car-name">Car Name:</label>
+            <input type="text" id="car-name" name="carName" required>
 
-        <section id="rent" class="section">
-            <h2>Rent a Car</h2>
-            <form id="rentForm">
-                <label for="carId">Enter Car ID:</label>
-                <input type="text" id="carId" placeholder="e.g., 1" required>
-                <button type="submit">Rent</button>
-            </form>
-            <p id="rentMessage" class="message"></p>
-        </section>
+            <label for="customer-name">Your Name:</label>
+            <input type="text" id="customer-name" name="customerName" required>
 
-        <section id="return" class="section">
-            <h2>Return a Car</h2>
-            <form id="returnForm">
-                <label for="returnCarId">Enter Car ID:</label>
-                <input type="text" id="returnCarId" placeholder="e.g., 1" required>
-                <button type="submit">Return</button>
-            </form>
-            <p id="returnMessage" class="message"></p>
-        </section>
-    </main>
+            <label for="rental-days">Number of Days:</label>
+            <input type="number" id="rental-days" name="rentalDays" required>
+
+            <button type="submit">Rent Now</button>
+        </form>
+        <div class="message" id="confirmation-message"></div>
+    </section>
 
     <footer>
-        <p>&copy; 2024 Car Rental System. All rights reserved.</p>
+        <p>&copy; 2024 Car Rental System | Designed by You</p>
     </footer>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 </body>
 </html>
