--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Car Rental System | Designed by You</p>
+        <p>&copy; 2024 Car Rental System | Designed by TEAM INNOVATE(SKIT)</p>
     </footer>
 
     <script src="script.js"></script>
