--- a/index.html
+++ b/index.html
@@ -13,75 +13,42 @@
             <ul>
                 <li><a href="#available-cars">Available Cars</a></li>
                 <li><a href="#rent">Rent a Car</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#return">Return a Car</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="available-cars" class="section">
         <h2>Available Cars</h2>
-        <p>Select from our fleet of well-maintained cars:</p>
-        <div class="car-grid">
-            <div class="car-card">
-                <h3>Honda Civic</h3>
-                <p>Price: ₹1,500/day</p>
-                <p>Seats: 5</p>
-                <p>Fuel: Petrol</p>
-            </div>
-            <div class="car-card">
-                <h3>Toyota Corolla</h3>
-                <p>Price: ₹1,800/day</p>
-                <p>Seats: 5</p>
-                <p>Fuel: Petrol</p>
-            </div>
-            <div class="car-card">
-                <h3>Maruti Suzuki Swift</h3>
-                <p>Price: ₹1,200/day</p>
-                <p>Seats: 5</p>
-                <p>Fuel: Diesel</p>
-            </div>
-            <div class="car-card">
-                <h3>Hyundai Creta</h3>
-                <p>Price: ₹2,200/day</p>
-                <p>Seats: 5</p>
-                <p>Fuel: Diesel</p>
-            </div>
-            <div class="car-card">
-                <h3>Mahindra Scorpio</h3>
-                <p>Price: ₹2,500/day</p>
-                <p>Seats: 7</p>
-                <p>Fuel: Diesel</p>
-            </div>
-            <div class="car-card">
-                <h3>Tata Nexon</h3>
-                <p>Price: ₹1,800/day</p>
-                <p>Seats: 5</p>
-                <p>Fuel: Electric</p>
-            </div>
-            <div class="car-card">
-                <h3>Ford EcoSport</h3>
-                <p>Price: ₹1,700/day</p>
-                <p>Seats: 5</p>
-                <p>Fuel: Petrol</p>
-            </div>
+        <p>View and rent from our fleet of cars below:</p>
+        <div class="car-grid" id="car-grid">
+            <!-- Car tiles will be dynamically loaded here -->
         </div>
     </section>
 
     <section id="rent" class="section">
         <h2>Rent a Car</h2>
         <form id="rental-form">
-            <label for="car-name">Car Name:</label>
-            <input type="text" id="car-name" name="carName" required>
+            <label for="car-id">Car ID:</label>
+            <input type="number" id="car-id" name="carId" required>
 
             <label for="customer-name">Your Name:</label>
             <input type="text" id="customer-name" name="customerName" required>
 
-            <label for="rental-days">Number of Days:</label>
-            <input type="number" id="rental-days" name="rentalDays" required>
-
             <button type="submit">Rent Now</button>
         </form>
         <div class="message" id="confirmation-message"></div>
+    </section>
+
+    <section id="return" class="section">
+        <h2>Return a Car</h2>
+        <form id="return-form">
+            <label for="return-car-id">Car ID:</label>
+            <input type="number" id="return-car-id" name="returnCarId" required>
+
+            <button type="submit">Return Now</button>
+        </form>
+        <div class="message" id="return-message"></div>
     </section>
 
     <footer>
